# move-stylus-poc

./: .cursorignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md
crates/move-bytecode-to-wasm/: Cargo.toml
crates/move-bytecode-to-wasm/src/: abi_types.rs  compilation_context.rs  constructor.rs  data.rs  generics.rs  hostio.rs  lib.rs  memory.rs  native_functions.rs  runtime.rs  runtime_error_codes.rs  test_tools.rs  translation.rs  utils.rs  vm_handled_types.rs  wasm_builder_extensions.rs  wasm_helpers.rs  wasm_validation.rs
crates/move-bytecode-to-wasm/src/abi_types/: function_encoding.rs  packing.rs  public_function.rs  type_mapping.rs  unpacking.rs  vm_handled_datatypes.rs
crates/move-bytecode-to-wasm/src/compilation_context/: error.rs  module_data.rs  reserved_modules.rs
crates/move-bytecode-to-wasm/src/hostio/: entrypoint_router.rs  host_functions.rs
crates/move-bytecode-to-wasm/src/native_functions/: event.rs  object.rs  transaction.rs  transfer.rs  types.rs
crates/move-bytecode-to-wasm/src/runtime/: copy.rs  equality.rs  integers.rs  storage.rs  swap.rs  vector.rs
crates/move-bytecode-to-wasm/src/storage/: encoding.rs
crates/move-bytecode-to-wasm/src/translation/: bytecodes.rs  error.rs  flow.rs  functions.rs  intermediate_types.rs  table.rs  types_stack.rs
crates/move-bytecode-to-wasm/src/vm_handled_types/: signer.rs  tx_context.rs  uid.rs
crates/move-bytecode-to-wasm/tests/: comparisons.rs  constructor.rs  control-flow.rs  dependencies.rs  enums.rs  framework.rs  generic_functions.rs  operations-bitwise.rs  operations-cast.rs  operations-equality.rs  primitives.rs  references.rs  stdlib.rs  storage.rs  structs.rs
crates/move-bytecode-to-wasm/tests/common/: mod.rs
crates/move-bytecode-to-wasm/tests/constructor/: constructor.move  constructor_bad_args_1.move  constructor_bad_args_2.move  constructor_bad_args_3.move  constructor_bad_args_4.move  constructor_bad_args_5.move  constructor_with_otw.move  constructor_with_return.move
crates/move-bytecode-to-wasm/tests/control-flow/: control_flow_u64.move  control_flow_u8.move
crates/move-bytecode-to-wasm/tests/dependencies/: another_mod.move  main.move  other_mod.move
crates/move-bytecode-to-wasm/tests/enums/: enum_abi_packing_unpacking.move
crates/move-bytecode-to-wasm/tests/framework/: event.move  tx_context.move
crates/move-bytecode-to-wasm/tests/generic_functions/: generic_functions.move
crates/move-bytecode-to-wasm/tests/operations-bitwise/: uint_128.move  uint_16.move  uint_256.move  uint_32.move  uint_64.move  uint_8.move
crates/move-bytecode-to-wasm/tests/operations-cast/: uint_128.move  uint_16.move  uint_256.move  uint_32.move  uint_64.move  uint_8.move
crates/move-bytecode-to-wasm/tests/operations-comparisons/: uint_128.move  uint_16.move  uint_256.move  uint_32.move  uint_64.move  uint_8.move
crates/move-bytecode-to-wasm/tests/operations-equality/: primitives.move  references.move  structs.move  vectors.move
crates/move-bytecode-to-wasm/tests/primitives/: address.move  bool.move  multi_values_return.move  signer.move  signer_invalid_dup_signer.move  signer_invalid_nested_signer.move  uint_128.move  uint_16.move  uint_256.move  uint_32.move  uint_64.move  uint_8.move  vec_128.move  vec_32.move  vec_64.move  vec_struct.move  vec_vec_128.move  vec_vec_32.move
crates/move-bytecode-to-wasm/tests/references/: address.move  arguments.move  bool.move  signer.move  structs.move  structs_generic.move  uint_128.move  uint_16.move  uint_256.move  uint_32.move  uint_64.move  uint_8.move  vec_256.move  vec_64.move  vec_8.move
crates/move-bytecode-to-wasm/tests/stdlib/: use_stdlib.move
crates/move-bytecode-to-wasm/tests/storage/: capability.move  counter.move  encoding.move  transfer.move
crates/move-bytecode-to-wasm/tests/structs/: generic_struct_abi_packing_unpacking.move  generic_struct_fields.move  generic_struct_misc.move  generic_struct_mut_fields.move  generic_struct_pack_unpack.move  struct_bug.move  struct_copy.move  struct_fields.move  (+4 more)
crates/move-cli/: Cargo.toml
crates/move-cli/src/: lib.rs
example/: Cargo.toml  Move.toml
example/scripts/: counter.rs  counter_with_init.rs  dog_walker.rs  interaction.rs  interaction_2.rs  primitives_and_operations.rs
example/sources/: another_mod.move  counter.move  counter_with_init.move  dog_walker.move  hello_world.move  hello_world_2.move  other_mod.move  primitives_and_operations.move  stack.move
(+50 files in other folders)
