[workspace]
resolver = "2"

members = [
    "crates/*",
    "example",
]

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
anyhow = "1.0.52"
clap = { version = "4", features = ["derive"] }

move-binary-format = { git = "https://github.com/MystenLabs/sui" }
move-bytecode-source-map = { git = "https://github.com/MystenLabs/sui" }
move-bytecode-viewer = { git = "https://github.com/MystenLabs/sui" }
move-command-line-common = { git = "https://github.com/MystenLabs/sui" }
move-compiler = { git = "https://github.com/MystenLabs/sui" }
move-core-types = { git = "https://github.com/MystenLabs/sui" }
move-coverage = { git = "https://github.com/MystenLabs/sui" }
move-disassembler = { git = "https://github.com/MystenLabs/sui" }
move-docgen = { git = "https://github.com/MystenLabs/sui" }
move-package = { git = "https://github.com/MystenLabs/sui" }
move-stdlib-natives = { git = "https://github.com/MystenLabs/sui" }
move-vm-runtime = { git = "https://github.com/MystenLabs/sui" }
move-vm-test-utils = { git = "https://github.com/MystenLabs/sui" }
move-unit-test = { git = "https://github.com/MystenLabs/sui" }

move-bytecode-to-wasm = { path = "crates/move-bytecode-to-wasm" }
