[package]
name = "move-hello-world-example"
version = "0.1.11"
edition = "2021"

[[bin]]
name = "interaction"
path = "scripts/interaction.rs"

[[bin]]
name = "primitives_and_operations"
path = "scripts/primitives_and_operations.rs"

[dependencies]
dotenv = "0.15.0"
eyre = "0.6.8"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
alloy = "1.0.23"
alloy-signer-wallet = "0.0.0-reserved"
