[package]
name = "move-bytecode-to-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
move-package.workspace = true
move-binary-format.workspace = true

alloy-primitives = "1.0.0"
alloy-sol-types = "1.0.0"
walrus = "0.23"
wasmprinter = "0.228"
wasmparser = "0.228"

[dev-dependencies]
alloy = "0.13.0"
wasmtime = "31.0.0"
